feat: receipts mobile version

--- a/src/components/_receipts.html
+++ b/src/components/_receipts.html
@@ -3,7 +3,7 @@
         <div class="receipts__content">
             <div class="receipts__heading section-heading subtitle">
                 <div class="receipts__heading-text subtitle__text">
-                    <h2 class="receipts__heading-text-title h h_h1">Ближайшие</h2>
+                    <h2 class="receipts__heading-text-title h h_h1">Недавние</h2>
 
                     <p class="receipts__heading-text-subtext">
                         <small class="text__regular-16-caps">100+ товаров</small>
@@ -12,8 +12,8 @@
                     </p>
                 </div>
 
-                <a href="" class="receipts__heading-link link">
-                    <span>Все поступления</span>
+                <a href=""  data-da=".receipts__content,768,last" class="receipts__heading-link link">
+                    <span>Все новинки</span>
 
                     <svg viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -41,147 +41,107 @@
                 </a>
             </div>
 
-            <ul class="receipts__filters-list">
-                <li class="receipts__filters-item text__regular-18 --active">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-                <li class="receipts__filters-item text__regular-18">
-                    <a href="#"> 09.02 </a>
-                </li>
-            </ul>
+            <div class="receipts__slider swiper receipts-swiper">
+                <ul class="swiper-wrapper receipts__cards">
+                    <li class="swiper-slide">
+                        <a href="#" class="receipts__card">
+                            <div class="receipts__card-top">
+                                <figure class="receipts__card-top-image">
+                                    <img src="./assets/images/sections/receipts/receipts-image-1.png" alt="" />
+                                </figure>
 
-            <ul class="receipts__cards">
-                <li>
-                    <a href="#" class="receipts__card">
-                        <div class="receipts__card-top">
-                            <figure class="receipts__card-top-image">
-                                <img src="./assets/images/sections/receipts/receipts-image-1.png" alt="" />
-                            </figure>
-
-                            <span class="receipts__card-top-counter">
+                                <span class="receipts__card-top-counter">
                                 50 <br />
                                 товаров
                             </span>
-                        </div>
+                            </div>
 
-                        <div class="receipts__card-bottom">
+                            <div class="receipts__card-bottom">
                             <span class="receipts__card-bottom-title"
-                                >Пакеты подарочные <br />
+                            >Пакеты подарочные <br />
                                 для бутылки</span
                             >
 
-                            <figure class="receipts__card-bottom-icon">
-                                <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
-                            </figure>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="receipts__card">
-                        <div class="receipts__card-top">
-                            <figure class="receipts__card-top-image">
-                                <img src="./assets/images/sections/receipts/receipts-image-2.png" alt="" />
-                            </figure>
+                                <figure class="receipts__card-bottom-icon">
+                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                </figure>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="swiper-slide">
+                        <a href="#" class="receipts__card">
+                            <div class="receipts__card-top">
+                                <figure class="receipts__card-top-image">
+                                    <img src="./assets/images/sections/receipts/receipts-image-2.png" alt="" />
+                                </figure>
 
-                            <span class="receipts__card-top-counter">
+                                <span class="receipts__card-top-counter">
                                 50 <br />
                                 товаров
                             </span>
-                        </div>
+                            </div>
 
-                        <div class="receipts__card-bottom">
+                            <div class="receipts__card-bottom">
                             <span class="receipts__card-bottom-title"
-                                >Подарочные пакеты <br />
+                            >Подарочные пакеты <br />
                                 "Мастхэв"</span
                             >
 
-                            <figure class="receipts__card-bottom-icon">
-                                <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
-                            </figure>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="receipts__card">
-                        <div class="receipts__card-top">
-                            <figure class="receipts__card-top-image">
-                                <img src="./assets/images/sections/receipts/receipts-image-3.png" alt="" />
-                            </figure>
+                                <figure class="receipts__card-bottom-icon">
+                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                </figure>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="swiper-slide">
+                        <a href="#" class="receipts__card">
+                            <div class="receipts__card-top">
+                                <figure class="receipts__card-top-image">
+                                    <img src="./assets/images/sections/receipts/receipts-image-3.png" alt="" />
+                                </figure>
 
-                            <span class="receipts__card-top-counter">
+                                <span class="receipts__card-top-counter">
                                 50 <br />
                                 товаров
                             </span>
-                        </div>
+                            </div>
 
-                        <div class="receipts__card-bottom">
+                            <div class="receipts__card-bottom">
                             <span class="receipts__card-bottom-title"
-                                >Коробки для цветов <br />
+                            >Коробки для цветов <br />
                                 "Премиум"</span
                             >
 
-                            <figure class="receipts__card-bottom-icon">
-                                <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
-                            </figure>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="receipts__card">
-                        <div class="receipts__card-top">
-                            <figure class="receipts__card-top-image">
-                                <img src="./assets/images/sections/receipts/receipts-image-4.png" alt="" />
-                            </figure>
+                                <figure class="receipts__card-bottom-icon">
+                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                </figure>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="swiper-slide">
+                        <a href="#" class="receipts__card">
+                            <div class="receipts__card-top">
+                                <figure class="receipts__card-top-image">
+                                    <img src="./assets/images/sections/receipts/receipts-image-4.png" alt="" />
+                                </figure>
 
-                            <span class="receipts__card-top-counter">
+                                <span class="receipts__card-top-counter">
                                 50 <br />
                                 товаров
                             </span>
-                        </div>
+                            </div>
 
-                        <div class="receipts__card-bottom">
-                            <span class="receipts__card-bottom-title">Краска-спрей <br> для цветов</span>
+                            <div class="receipts__card-bottom">
+                                <span class="receipts__card-bottom-title">Краска-спрей <br> для цветов</span>
 
-                            <figure class="receipts__card-bottom-icon">
-                                <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
-                            </figure>
-                        </div>
-                    </a>
-                </li>
-            </ul>
+                                <figure class="receipts__card-bottom-icon">
+                                    <img src="../assets/images/icons/arrow-rotated.svg" alt="" />
+                                </figure>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
