--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -115,15 +115,29 @@
         }
     }
 
+    @include small-tablet{
+        width: 100%;
+        justify-content: center;
+        gap: 3.2rem;
+        margin-top: 4.8rem;
+    }
+
     span {
         display: block;
         font-size: 1.6rem;
         color: $green;
+
+        @include small-tablet{
+            font-weight: 400;
+            font-size: 3.6rem;
+        }
     }
 
     svg {
         width: 2.4rem;
         height: 2.4rem;
+
+        @include sizes(4.8rem, 4.8rem)
     }
 }
 
@@ -139,6 +153,12 @@
 
     .link {
         gap: 1.6rem;
+
+        @include small-tablet{
+            gap: 3.2rem;
+            width: 100%;
+            justify-content: center;
+        }
     }
 
     &.subtitle {
@@ -153,14 +173,30 @@
                     gap: 2rem;
                     margin-top: -0.5rem;
 
+                    @include small-tablet{
+                        gap: 1.6rem;
+                        margin-top: 0;
+                    }
+
                     span {
                         margin-left: 3rem;
+
+                        @include small-tablet{
+                            margin-left: 0;
+                        }
                     }
 
                     small {
                         max-width: 7.3rem;
                         width: 100%;
                         display: block;
+
+                        @include small-tablet{
+                            max-width: 100%;
+                            font-weight: 400;
+                            font-size: 2.6rem;
+                            line-height: 120%;
+                        }
                     }
                 }
             }
