feat: recommendations section mobile version

--- a/src/components/_recommendations.html
+++ b/src/components/_recommendations.html
@@ -12,7 +12,7 @@
                     </p>
                 </div>
 
-                <div class="recommendations__heading-navigation navigation-buttons">
+                <div data-da=".recommendations__content,768,last" class="recommendations__heading-navigation navigation-buttons">
                     <button type="button" class="swiper-button-prev">
                         <svg
                                 width="25"
