--- a/src/scss/sections/_recommendations.scss
+++ b/src/scss/sections/_recommendations.scss
@@ -2,4 +2,10 @@
     .swiper-slide {
         height: unset;
     }
+
+    &__title {
+        @include small-tablet{
+            margin-bottom: 8rem;
+        }
+    }
 }
