--- a/src/ui/styles/_navigation-buttons.scss
+++ b/src/ui/styles/_navigation-buttons.scss
@@ -2,4 +2,10 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+
+    @include small-tablet{
+        gap: 1.6rem;
+        justify-content: center;
+        margin-top: 4.8rem;
+    }
 }
