--- a/src/scss/sections/_favorites.scss
+++ b/src/scss/sections/_favorites.scss
@@ -5,18 +5,38 @@
         align-items: flex-start;
         gap: 2rem;
 
+        @include small-tablet{
+            gap: .8rem;
+            margin-bottom: 8rem;
+        }
+
         sup {
             color: $grey-text;
+
+            @include small-tablet{
+                font-weight: 500;
+                font-size: 3.6rem;
+            }
         }
     }
 
     &__subtitle {
         margin-bottom: 3.2rem;
+
+        @include small-tablet{
+
+        }
     }
 
     &__list {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 4rem;
+
+        @include small-tablet{
+            display: flex;
+            flex-direction: column;
+            gap: 1.6rem;
+        }
     }
 }
