--- a/src/ui/styles/_recommendations-card.scss
+++ b/src/ui/styles/_recommendations-card.scss
@@ -84,6 +84,8 @@
 
                 &-favorite-button {
                     display: block;
+                    right: 2rem;
+                    top: 2rem;
                 }
             }
         }
@@ -196,8 +198,12 @@
                 &.--primary {
                     background-color: $green;
                     color: $white;
-                    max-width: 60%;
+                    max-width: 58%;
                     width: 100%;
+
+                    @include small-tablet{
+                        max-width: 60%;
+                    }
 
                     span {
                         &:last-child {
@@ -295,10 +301,39 @@
         &-favorite-button {
             display: none;
             position: absolute;
-            right: 2rem;
-            top: 2rem;
             @include sizes(2.4rem, 2.4rem);
             z-index: 3;
+
+            .favorites-page & {
+                display: block;
+                right: 3.2rem;
+                top: 3.2rem;
+                padding: .8rem;
+                border-radius: 50%;
+                backdrop-filter: blur(4.8rem);
+                background: rgba(244, 244, 244, 0.4);
+                @include sizes(4.4rem, 4.4rem);
+
+                @include small-tablet{
+                    @include sizes(6.4rem, 6.4rem);
+                    padding: 1.6rem;
+                    top: 4.8rem;
+                    right: 4.8rem;
+                }
+
+                svg {
+                    path {
+                        &:first-child {
+                            fill: $pink;
+                            stroke: $pink;
+                        }
+
+                        &:last-child {
+                            fill: $pink;
+                        }
+                    }
+                }
+            }
 
             svg {
                 width: 100%;
