feat: favorites empty page mobile version

--- a/src/components/_favorites-empty.html
+++ b/src/components/_favorites-empty.html
@@ -8,8 +8,12 @@
         <div class="favorites__content">
             <h1 class="favorites__title h h_h1">Избранное</h1>
 
-            <p class="favorites__subtitle text__regular-20">
+            <p class="favorites__subtitle text__regular-20 _desktop-only">
                 Вы ничего не добавили в избранные товары, перейдите в каталог, чтобы продолжить покупки.
+            </p>
+
+            <p class="favorites__subtitle text__regular-20 _mobile-only">
+                Корзина пуста, перейдите в каталог, чтобы продолжить покупки.
             </p>
 
             <a href="#" class="favorites__link btn"> Перейти в каталог </a>
