--- a/src/ui/styles/_typo.scss
+++ b/src/ui/styles/_typo.scss
@@ -31,14 +31,21 @@
     &_h4 {
         font-size: 2rem;
         line-height: 120%;
+
+        @media (max-width: 48em) {
+            font-size: 3.6rem;
+        }
     }
 }
 
 .text {
     &__regular {
-
         &-20 {
             font-size: 2rem;
+
+            @media (max-width: 48em) {
+                font-size: 3rem;
+            }
         }
 
         &-18 {
@@ -52,6 +59,11 @@
         &-16 {
             font-size: 1.6rem;
             line-height: 120%;
+
+            @media (max-width: 48em) {
+                font-size: 3rem;
+                line-height: 4rem;
+            }
         }
 
         &-16-caps {
@@ -71,6 +83,14 @@
             @include small-tablet {
                 font-size: 2.6rem;
                 line-height: 120%;
+            }
+        }
+
+        &-12 {
+            font-size: 1.2rem;
+
+            @media (max-width: 48em) {
+                font-size: 2.4rem;
             }
         }
     }
