--- a/src/ui/styles/modals.scss
+++ b/src/ui/styles/modals.scss
@@ -1,169 +1,215 @@
 body::after {
-  content: '';
-  position: fixed;
-  z-index: 149;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #1D1D1B;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.8s ease 0s;
-  .modal-show & {
-    opacity: 0.5;
-  }
+    content: '';
+    position: fixed;
+    z-index: 2000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1d1d1b;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.8s ease 0s;
+    .modal-show & {
+        opacity: 0.5;
+    }
 }
 
 .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  padding: 3rem 2.4rem;
-  visibility: hidden;
-  pointer-events: none;
-  transition: visibility 0.8s ease 0s;
-  &.modal_show {
-    z-index: 150;
-    visibility: visible;
-    overflow: auto;
-    pointer-events: auto;
-    .modal__content {
-      visibility: visible;
-      transform: scale(1);
-    }
-  }
-
-  // .modal__wrapper
-
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex: 1 1 auto;
-    width: 100%;
-    min-height: 100%;
-  }
-
-  // .modal__content
-
-  &__content {
-    position: relative;
-    max-width: 111.7rem;
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 3rem 2.4rem;
     visibility: hidden;
-    transform: scale(0);
-    transition: transform 0.3s ease 0s;
-    .lock & {
-      visibility: visible;
-    }
-  }
-
-  // .modal__body
-
-  &__body {
-    position: relative;
-    padding: 7rem;
-    width: 100%;
-    background-color: $light-green;
-    border-radius: 3rem;
-    overflow: hidden;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 66.1rem;
-      height: 66.1rem;
-      border-radius: 50%;
-      background-color: $white;
-      opacity: 0.2;
+    pointer-events: none;
+    transition: visibility 0.8s ease 0s;
+    &.modal_show {
+        z-index: 2001;
+        visibility: visible;
+        overflow: auto;
+        pointer-events: auto;
+        .modal__content {
+            visibility: visible;
+            transform: scale(1);
+        }
     }
 
-    &::before {
-      left: -27rem;
-      bottom: -37rem;
+    // .modal__wrapper
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex: 1 1 auto;
+        width: 100%;
+        min-height: 100%;
     }
 
-    &::after {
-      top: -38rem;
-      right: -30rem;
-    }
-  }
+    // .modal__content
 
-  // .modal__close
-
-  &__close {
-    position: absolute;
-    z-index: 10;
-    top: 3.2rem;
-    right: 3.2rem;
-    height: 2.4rem;
-    width: 2.4rem;
-    img {
-      object-fit: contain;
+    &__content {
+        position: relative;
+        max-width: 111.7rem;
+        width: 100%;
+        visibility: hidden;
+        transform: scale(0);
+        transition: transform 0.3s ease 0s;
+        .lock & {
+            visibility: visible;
+        }
     }
-  }
+
+    // .modal__body
+
+    &__body {
+        position: relative;
+        padding: 7rem;
+        width: 100%;
+        background-color: $light-green;
+        border-radius: 3rem;
+        overflow: hidden;
+
+        @media (max-width: 48em) {
+            padding: 14.4rem 3.2rem 12.8rem 3.2rem;
+            border-radius: 4.8rem;
+        }
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            width: 66.1rem;
+            height: 66.1rem;
+            border-radius: 50%;
+            background-color: $white;
+            opacity: 0.2;
+
+            @media (max-width: 48em) {
+                width: 101.2rem;
+                height: 101.2rem;
+            }
+        }
+
+        &::before {
+            left: -27rem;
+            bottom: -37rem;
+
+            @media (max-width: 48em) {
+                top: -60rem;
+                left: -50rem;
+                bottom: auto;
+            }
+        }
+
+        &::after {
+            top: -38rem;
+            right: -30rem;
+
+            @media (max-width: 48em) {
+                content: none;
+            }
+        }
+    }
+
+    // .modal__close
+
+    &__close {
+        position: absolute;
+        z-index: 10;
+        top: 3.2rem;
+        right: 3.2rem;
+        height: 2.4rem;
+        width: 2.4rem;
+        img {
+            object-fit: contain;
+        }
+
+        @media (max-width: 48em) {
+            width: 4.8rem;
+            height: 4.8rem;
+        }
+    }
 }
 
 // --------------------------------------------------------------------------
 
 .checkout-complete-modal {
-  color: $white;
+    color: $white;
 
-  &__inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
 
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      background-size: contain;
-      background-repeat: no-repeat;
+        @media (min-width: 48em) {
+            &::before,
+            &::after {
+                content: '';
+                position: absolute;
+                z-index: 1;
+                background-size: contain;
+                background-repeat: no-repeat;
+            }
+
+            &::before {
+                bottom: -10rem;
+                left: -3rem;
+                width: 32.2rem;
+                height: 41.3rem;
+                background-image: url('./assets/images/modals/image44.webp');
+                transform: rotate(20deg);
+            }
+
+            &::after {
+                bottom: -7rem;
+                right: -11rem;
+                width: 41.4rem;
+                height: 37.4rem;
+                background-image: url('./assets/images/modals/image45.webp');
+                transform: rotate(-49deg);
+            }
+        }
     }
 
-    &::before {
-      bottom: -10rem;
-      left: -3rem;
-      width: 32.2rem;
-      height: 41.3rem;
-      background-image: url("./assets/images/modals/image44.webp");
-      transform: rotate(20deg);
+    &__heading {
+        margin-bottom: 1.6rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 3.2rem;
+        }
     }
 
-    &::after {
-      bottom: -7rem;
-      right: -11rem;
-      width: 41.4rem;
-      height: 37.4rem;
-      background-image: url("./assets/images/modals/image45.webp");
-      transform: rotate(-49deg);
+    &__text {
+        margin-bottom: 4rem;
+        max-width: 50.3rem;
+
+        @media (max-width: 48em) {
+            margin-bottom: 6.4rem;
+            max-width: 64rem;
+        }
     }
-  }
 
-  &__heading {
-    margin-bottom: 1.6rem;
-  }
+    &__actions {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.8rem;
 
-  &__text {
-    margin-bottom: 4rem;
-    max-width: 50.3rem;
-  }
+        .btn {
+            height: 5.3rem;
+        }
 
-  &__actions {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.8rem;
+        @media (max-width: 48em) {
+            row-gap: 1.6rem;
+            width: 100%;
 
-    .btn {
-      height: 5.3rem;
+            .btn {
+                height: 8.8rem;
+                width: 100%;
+            }
+        }
     }
-  }
 }
