--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -4,16 +4,23 @@
         <div class="modal__content">
             <div class="modal__body">
                 <div class="checkout-complete-modal__inner">
-                        <button data-close type="button" class="modal__close">
-                            <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
-                        </button>
-                        <span class="checkout-complete-modal__heading h h_h2">Ваш заказ <span>#123456</span> оформлен!</span>
-                        <p class="checkout-complete-modal__text">Спасибо за выбор компании Миррэй! В ближайшее время с Вами свяжется наш менеджер для уточнения деталей.</p>
-                        <div class="checkout-complete-modal__actions">
-                            <a href="#" class="checkout-complete-modal__btn btn btn__white">Перейти в личный кабинет</a>
-                            <a href="#" class="checkout-complete-modal__btn btn btn_ghost">Перейти в каталог</a>
-                        </div>
+                    <button data-close type="button" class="modal__close">
+                        <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
+                    </button>
+                    <span class="checkout-complete-modal__heading h h_h2"
+                        >Ваш заказ <span>#123456</span> оформлен!</span
+                    >
+                    <p class="checkout-complete-modal__text">
+                        Спасибо за выбор компании Миррэй! В ближайшее время с Вами свяжется наш менеджер для
+                        уточнения деталей.
+                    </p>
+                    <div class="checkout-complete-modal__actions">
+                        <a href="#" class="checkout-complete-modal__btn btn btn__white"
+                            >Перейти в личный кабинет</a
+                        >
+                        <a href="#" class="checkout-complete-modal__btn btn btn_ghost">Перейти в каталог</a>
                     </div>
+                </div>
             </div>
         </div>
     </div>
@@ -28,13 +35,81 @@
                     <button data-close type="button" class="modal__close">
                         <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
                     </button>
-                    <span class="checkout-complete-modal__heading h h_h2">Ваш заказ <span>#123456</span> оформлен!</span>
-                    <p class="checkout-complete-modal__text">Спасибо за выбор компании Миррэй! Данные для личного кабинета направлены на почту "farexampe@.com"</p>
+                    <span class="checkout-complete-modal__heading h h_h2"
+                        >Ваш заказ <span>#123456</span> оформлен!</span
+                    >
+                    <p class="checkout-complete-modal__text">
+                        Спасибо за выбор компании Миррэй! Данные для личного кабинета направлены на почту
+                        "farexampe@.com"
+                    </p>
                     <div class="checkout-complete-modal__actions">
-                        <a href="#" class="checkout-complete-modal__btn btn btn__white">Перейти к регистрации</a>
+                        <a href="#" class="checkout-complete-modal__btn btn btn__white"
+                            >Перейти к регистрации</a
+                        >
                         <a href="#" class="checkout-complete-modal__btn btn btn_ghost">Перейти в каталог</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- информационное меню в мобильной версии -->
+<div id="basket-order-info" aria-hidden="true" class="modal info-modal">
+    <div class="modal__wrapper">
+        <div class="modal__content">
+            <div class="modal__body">
+                <button data-close type="button" class="modal__close">
+                    <img src="./assets/images/icons/close.svg" alt="" class="modal__close-icon" />
+                </button>
+
+                <ul class="modal__list">
+                    <li class="modal__item">
+                        <div class="modal__item-heading">
+                            <strong class="modal__item-title"> Розничная цена: </strong>
+
+                            <span class="modal__item-price"> 40.90₽ </span>
+                        </div>
+
+                        <p class="modal__item-description">
+                            При заказе на общую сумму от 15 000₽ применяется скидка 5%
+                        </p>
+                    </li>
+                    <li class="modal__item">
+                        <div class="modal__item-heading">
+                            <strong class="modal__item-title"> Оптовая цена: </strong>
+
+                            <span class="modal__item-price">
+                                40.90₽
+
+                                <sub> 40.90₽ </sub>
+                            </span>
+                        </div>
+
+                        <p class="modal__item-description">При заказе на общую сумму от 100 000 ₽</p>
+                    </li>
+                    <li class="modal__item">
+                        <div class="modal__item-heading">
+                            <strong class="modal__item-title"> Спеццена: </strong>
+
+                            <span class="modal__item-price"> 32.90₽ </span>
+                        </div>
+
+                        <p class="modal__item-description">Действует за заказ кратный коробу</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="basket-order-info-price" aria-hidden="true" class="modal info-modal">
+    <div class="modal__wrapper">
+        <div class="modal__content">
+            <div class="modal__body">
+                <button data-close type="button" class="modal__close">
+                    <img src="./assets/images/icons/close.svg" alt="" class="modal__close-icon" />
+                </button>
             </div>
         </div>
     </div>
