--- a/src/ui/styles/_input.scss
+++ b/src/ui/styles/_input.scss
@@ -198,7 +198,7 @@ textarea {
         @include small-tablet{
             width: 4.3rem;
             height: 4.3rem;
-            border-radius: .8rem;
+            border-radius: 1.2rem;
         }
 
         &::before {
