--- a/src/ui/styles/modals.scss
+++ b/src/ui/styles/modals.scss
@@ -1,169 +1,262 @@
 body::after {
-  content: '';
-  position: fixed;
-  z-index: 149;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #1D1D1B;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.8s ease 0s;
-  .modal-show & {
-    opacity: 0.5;
-  }
+    content: '';
+    position: fixed;
+    z-index: 149;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1d1d1b;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.8s ease 0s;
+    .modal-show & {
+        opacity: 0.5;
+    }
 }
 
 .modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  padding: 3rem 2.4rem;
-  visibility: hidden;
-  pointer-events: none;
-  transition: visibility 0.8s ease 0s;
-  &.modal_show {
-    z-index: 150;
-    visibility: visible;
-    overflow: auto;
-    pointer-events: auto;
-    .modal__content {
-      visibility: visible;
-      transform: scale(1);
-    }
-  }
-
-  // .modal__wrapper
-
-  &__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex: 1 1 auto;
-    width: 100%;
-    min-height: 100%;
-  }
-
-  // .modal__content
-
-  &__content {
-    position: relative;
-    max-width: 111.7rem;
-    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 3rem 2.4rem;
     visibility: hidden;
-    transform: scale(0);
-    transition: transform 0.3s ease 0s;
-    .lock & {
-      visibility: visible;
-    }
-  }
-
-  // .modal__body
-
-  &__body {
-    position: relative;
-    padding: 7rem;
-    width: 100%;
-    background-color: $light-green;
-    border-radius: 3rem;
-    overflow: hidden;
-
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      width: 66.1rem;
-      height: 66.1rem;
-      border-radius: 50%;
-      background-color: $white;
-      opacity: 0.2;
+    pointer-events: none;
+    transition: visibility 0.8s ease 0s;
+    &.modal_show {
+        z-index: 150;
+        visibility: visible;
+        overflow: auto;
+        pointer-events: auto;
+        .modal__content {
+            visibility: visible;
+            transform: scale(1);
+        }
     }
 
-    &::before {
-      left: -27rem;
-      bottom: -37rem;
+    // .modal__wrapper
+
+    &__wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        flex: 1 1 auto;
+        width: 100%;
+        min-height: 100%;
     }
 
-    &::after {
-      top: -38rem;
-      right: -30rem;
-    }
-  }
+    // .modal__content
 
-  // .modal__close
-
-  &__close {
-    position: absolute;
-    z-index: 10;
-    top: 3.2rem;
-    right: 3.2rem;
-    height: 2.4rem;
-    width: 2.4rem;
-    img {
-      object-fit: contain;
+    &__content {
+        position: relative;
+        max-width: 111.7rem;
+        width: 100%;
+        visibility: hidden;
+        transform: scale(0);
+        transition: transform 0.3s ease 0s;
+        .lock & {
+            visibility: visible;
+        }
     }
-  }
+
+    // .modal__body
+
+    &__body {
+        position: relative;
+        padding: 7rem;
+        width: 100%;
+        background-color: $light-green;
+        border-radius: 3rem;
+        overflow: hidden;
+
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            width: 66.1rem;
+            height: 66.1rem;
+            border-radius: 50%;
+            background-color: $white;
+            opacity: 0.2;
+        }
+
+        &::before {
+            left: -27rem;
+            bottom: -37rem;
+        }
+
+        &::after {
+            top: -38rem;
+            right: -30rem;
+        }
+    }
+
+    // .modal__close
+
+    &__close {
+        position: absolute;
+        z-index: 10;
+        top: 3.2rem;
+        right: 3.2rem;
+        height: 2.4rem;
+        width: 2.4rem;
+        img {
+            object-fit: contain;
+        }
+
+        @include small-tablet {
+            top: 4.8rem;
+            right: 3.2rem;
+            width: 4.8rem;
+            height: 4.8rem;
+        }
+    }
 }
 
 // --------------------------------------------------------------------------
 
 .checkout-complete-modal {
-  color: $white;
+    color: $white;
 
-  &__inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
 
-    &::before,
-    &::after {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      background-size: contain;
-      background-repeat: no-repeat;
+        &::before,
+        &::after {
+            content: '';
+            position: absolute;
+            z-index: 1;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        &::before {
+            bottom: -10rem;
+            left: -3rem;
+            width: 32.2rem;
+            height: 41.3rem;
+            background-image: url('./assets/images/modals/image44.webp');
+            transform: rotate(20deg);
+        }
+
+        &::after {
+            bottom: -7rem;
+            right: -11rem;
+            width: 41.4rem;
+            height: 37.4rem;
+            background-image: url('./assets/images/modals/image45.webp');
+            transform: rotate(-49deg);
+        }
     }
 
-    &::before {
-      bottom: -10rem;
-      left: -3rem;
-      width: 32.2rem;
-      height: 41.3rem;
-      background-image: url("./assets/images/modals/image44.webp");
-      transform: rotate(20deg);
+    &__heading {
+        margin-bottom: 1.6rem;
     }
 
-    &::after {
-      bottom: -7rem;
-      right: -11rem;
-      width: 41.4rem;
-      height: 37.4rem;
-      background-image: url("./assets/images/modals/image45.webp");
-      transform: rotate(-49deg);
+    &__text {
+        margin-bottom: 4rem;
+        max-width: 50.3rem;
     }
-  }
 
-  &__heading {
-    margin-bottom: 1.6rem;
-  }
+    &__actions {
+        display: flex;
+        flex-direction: column;
+        row-gap: 0.8rem;
 
-  &__text {
-    margin-bottom: 4rem;
-    max-width: 50.3rem;
-  }
-
-  &__actions {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.8rem;
-
-    .btn {
-      height: 5.3rem;
+        .btn {
+            height: 5.3rem;
+        }
     }
-  }
+}
+
+.info-modal {
+    display: none;
+
+    &#basket-order-info-price {
+        .modal__close {
+            margin-bottom: 3.2rem;
+        }
+    }
+
+    @include small-tablet {
+        display: block;
+    }
+
+    .modal {
+        &__body {
+            &::before,
+            &::after {
+                display: none;
+            }
+
+            background-color: $white;
+            border-radius: 4.8rem;
+            padding: 4.8rem 3.2rem;
+        }
+
+        &__close {
+            position: initial;
+            display: block;
+            margin-left: auto;
+            margin-bottom: 8rem;
+        }
+
+        &__list {
+            display: flex;
+            flex-direction: column;
+            gap: 8rem;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: column;
+            gap: 1.6rem;
+
+            &-heading {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                padding-bottom: 1.6rem;
+                border-bottom: 0.1rem solid $black;
+            }
+
+            &-title {
+                font-weight: 500;
+                font-size: 3rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+            }
+
+            &-price {
+                font-weight: 500;
+                font-size: 3.6rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+                display: flex;
+                align-items: flex-end;
+                gap: 0.8rem;
+
+                sub {
+                    font-weight: 400;
+                    font-size: 2.6rem;
+                    line-height: 120%;
+                    text-transform: uppercase;
+                    text-decoration: line-through;
+                    color: #898485;
+                }
+            }
+
+            &-description {
+                font-weight: 400;
+                font-size: 3rem;
+                line-height: 130%;
+            }
+        }
+    }
 }
