--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -61,6 +61,9 @@
 // swiper-pagination
 @import 'swiper-pagination';
 
+// sticky-menu
+@import 'sticky-menu';
+
 // ---------------------------- для демонстрации ---------------------------
 
 .form {
