feat: contacts page mobile version

--- a/src/components/_contacts.html
+++ b/src/components/_contacts.html
@@ -167,7 +167,7 @@
                            </figure>
 
                            <p class="text__regular-16">
-                               Построить маршрут до склада Миррэй
+                               Построить маршрут <span class="_desktop-only">до склада Миррэй</span>
                            </p>
                        </div>
                     </div>
@@ -237,7 +237,7 @@
                             </figure>
 
                             <p class="text__regular-16">
-                                Построить маршрут до склада Миррэй
+                                Построить маршрут <span class="_desktop-only">до склада Миррэй</span>
                             </p>
                         </div>
                     </div>
