--- a/src/scss/sections/_connection.scss
+++ b/src/scss/sections/_connection.scss
@@ -1,26 +1,45 @@
 .connection {
     &__title {
         margin-bottom: 4.8rem;
+
+        @include small-tablet {
+            margin-bottom: 8rem;
+        }
     }
 
     &__list {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 4rem;
+
+        @include small-tablet {
+            display: flex;
+            flex-direction: column;
+            gap: 1.6rem;
+        }
     }
 
     &__item {
-       a {
-         padding: 3.6rem;
-         background-color: $grey-bg;
-         border-radius: 2.4rem;
-         display: flex;
-         align-items: center;
-         gap: 2.4rem;
-       }
+        a {
+            padding: 3.6rem;
+            background-color: $grey-bg;
+            border-radius: 2.4rem;
+            display: flex;
+            align-items: center;
+            gap: 2.4rem;
+
+            @include small-tablet {
+                padding: 3.2rem;
+                border-radius: 4.8rem;
+            }
+        }
 
         &-icon {
             @include sizes(7rem, 7rem);
+
+            @include small-tablet {
+                @include sizes(8rem, 8rem);
+            }
 
             img {
                 height: 100%;
@@ -29,6 +48,13 @@
 
         &-title {
             font-weight: 600;
+
+            @include small-tablet {
+                font-weight: 500;
+                font-size: 3.6rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+            }
         }
     }
 }
