--- a/src/scss/sections/_contacts.scss
+++ b/src/scss/sections/_contacts.scss
@@ -1,16 +1,30 @@
 .contacts {
     &__title {
         margin-bottom: 3.6rem;
+
+        @include small-tablet {
+            margin-bottom: 6.4rem;
+        }
     }
 
     &__list {
         display: flex;
         flex-direction: column;
         gap: 4rem;
+
+        @include small-tablet {
+            gap: 6.4rem;
+        }
     }
 
     &__item {
         position: relative;
+
+        @include small-tablet {
+            display: flex;
+            flex-direction: column-reverse;
+            gap: 1.6rem;
+        }
 
         &-card {
             border-radius: 2.4rem;
@@ -21,11 +35,26 @@
             min-height: 49.1rem;
             display: flex;
             flex-direction: column;
+
+            @include small-tablet {
+                max-width: 100%;
+                border-radius: 4.8rem;
+                padding: 4.8rem 3.2rem;
+                min-height: initial;
+            }
         }
 
         &-title {
             display: block;
             margin-bottom: 5.2rem;
+
+            @include small-tablet {
+                margin-bottom: 6.4rem;
+                font-weight: 500;
+                font-size: 3.6rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+            }
         }
 
         &-subtitle {
@@ -35,6 +64,14 @@
             font-size: 1.6rem;
             line-height: 120%;
             margin-top: auto;
+
+            @include small-tablet {
+                font-weight: 500;
+                font-size: 3rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+                margin-bottom: 2.4rem;
+            }
         }
 
         &-communication {
@@ -43,12 +80,23 @@
                 grid-template-columns: repeat(2, 43.3rem);
                 gap: 2.8rem;
                 justify-content: space-between;
+
+                @include small-tablet {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 3.2rem;
+                    margin-bottom: 6.4rem;
+                }
             }
 
             &-item {
                 display: flex;
                 align-items: flex-start;
                 gap: 1.2rem;
+
+                @include small-tablet {
+                    gap: 2.4rem;
+                }
 
                 &-icon {
                     @include sizes(8rem, 8rem);
@@ -58,8 +106,16 @@
                     align-items: center;
                     justify-content: center;
 
+                    @include small-tablet {
+                        @include sizes(10rem, 10rem);
+                    }
+
                     img {
                         @include sizes(4rem, 4rem);
+
+                        @include small-tablet {
+                            @include sizes(5rem, 5rem);
+                        }
                     }
                 }
 
@@ -70,11 +126,25 @@
                     strong {
                         display: block;
                         margin-bottom: 0.8rem;
+
+                        @include small-tablet {
+                            font-weight: 500;
+                            font-size: 3rem;
+                            line-height: 120%;
+                            letter-spacing: 0.04em;
+                            margin-bottom: 1.6rem;
+                        }
                     }
 
                     a {
                         color: $grey-text;
                         transition: 0.3s color ease;
+
+                        @include small-tablet{
+                            font-weight: 400;
+                            font-size: 3rem;
+                            line-height: 130%;
+                        }
 
                         &:hover {
                             color: $light-green;
@@ -83,6 +153,12 @@
 
                     p {
                         color: $grey-text;
+
+                        @include small-tablet {
+                            font-weight: 400;
+                            font-size: 3rem;
+                            line-height: 130%;
+                        }
                     }
                 }
             }
@@ -92,10 +168,18 @@
             &-list {
                 display: flex;
                 gap: 1.2rem;
+
+                @include small-tablet {
+                    gap: 2.4rem;
+                }
             }
 
             &-item {
                 @include sizes(5.2rem, 5.2rem);
+
+                @include small-tablet {
+                    @include sizes(8.8rem, 8.8rem);
+                }
 
                 svg {
                     height: 100%;
@@ -109,21 +193,47 @@
             align-items: center;
             gap: 1.2rem;
             margin-top: auto;
+            padding: 1.2rem;
+            border-radius: 10rem;
+            background-color: $white;
+            width: fit-content;
+            cursor: pointer;
+
+            @include hover {
+                .contacts__item-bottom-icon {
+                    transform: rotate(-45deg);
+                }
+            }
+
+            @include small-tablet {
+                justify-content: center;
+                width: 100%;
+                text-align: center;
+                gap: 1.6rem;
+            }
 
             &-icon {
-                padding: 1rem;
-                border-radius: 50%;
-                background-color: $white;
+                @include sizes(3.2rem, 3.2rem);
+                transition: 0.3s transform ease-out;
 
-                @include sizes(5.2rem, 5.2rem);
+                @include small-tablet {
+                    @include sizes(4.8rem, 4.8rem);
+                }
 
                 img {
-                    @include sizes(3.2rem, 3.2rem);
+                    height: 100%;
                 }
             }
 
             p {
-                font-weight: 500;
+                font-weight: 600;
+
+                @include small-tablet {
+                    font-weight: 500;
+                    font-size: 3rem;
+                    line-height: 120%;
+                    letter-spacing: 0.04em;
+                }
             }
         }
 
@@ -135,22 +245,42 @@
             top: 50%;
             transform: translateY(-50%);
 
+            @include small-tablet {
+                position: initial;
+                border-radius: 4.8rem;
+                transform: translateY(0);
+                @include sizes(100%, 45.6rem);
+            }
+
             .map {
                 width: 100%;
                 height: 100%;
                 border-radius: inherit;
 
-                [class*="-container"] {
+                [class*='-container'] {
                     border-radius: inherit;
                 }
 
                 .marker {
                     width: 3.6rem;
                     height: 3.6rem;
+                    background-color: $green;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    @include small-tablet {
+                        width: 7.2rem;
+                        height: 7.2rem;
+                    }
 
                     img {
-                        height: 100%;
-                        width: 100%;
+                        @include sizes(1.4rem, 2.2rem);
+
+                        @include small-tablet {
+                            @include sizes(2.8rem, 4.4rem);
+                        }
                     }
                 }
             }
